--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
 
     <!-- Strings related to chat -->
     <string name="chat_message_hint">Message</string>
+    <string name="chat_send_button_text">Send</string>
+    <string name="chat_choose_image_text">Choose an image</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
