--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,10 @@
     <string name="menu_logout_text">Log out</string>
 
     <!-- Strings related to contact list -->
+    <string name="contact_dialog_email">Email</string>
+    <string name="contact_dialog_title">Add new contact</string>
+    <string name="contact_dialog_add_contact">Add</string>
+    <string name="contact_dialog_cancel">Cancel</string>
 
     <!-- Strings related to chat -->
     <string name="chat_message_hint">Message</string>
@@ -25,5 +29,5 @@
     <string name="error_field_required">This field is required</string>
 
     <!-- Strings related to settings -->
-    <string name="copyright">© 2016 Peonsson and roppe546</string>
+    <string name="settings_copyright">© 2016 Peonsson and roppe546</string>
 </resources>
