--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,12 +8,14 @@
     <string name="menu_logout_text">Log out</string>
 
     <!-- Strings related to contact list -->
+    <string name="contact_list_last_received_time">%1$d-%2$02d-%3$02d %4$02d:%5$02d</string>
     <string name="contact_dialog_email">Email</string>
     <string name="contact_dialog_title">Add new contact</string>
     <string name="contact_dialog_add_contact">Add</string>
     <string name="contact_dialog_cancel">Cancel</string>
 
     <!-- Strings related to chat -->
+    <string name="chat_history_received_time">%1$d-%2$02d-%3$02d %4$02d:%5$02d</string>
     <string name="chat_message_hint">Message</string>
     <string name="chat_send_button_text">Send</string>
     <string name="chat_choose_image_text">Choose an image</string>
