Make it possible to attach images to a message.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,8 @@
     <string name="chat_message_hint">Message</string>
     <string name="chat_send_button_text">Send</string>
     <string name="chat_choose_image_text">Choose an image</string>
-    <string name="chat_open_image_fail">No image viewer app found</string>
+    <string name="chat_error_no_gallery_app_found">No image viewer app found</string>
+    <string name="chat_error_could_not_read_image">File couldn\'t be read</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
