--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="contact_dialog_add_contact">Add</string>
     <string name="contact_dialog_cancel">Cancel</string>
 
+    <string name="contact_list_GET_CONTACTS">http://192.168.0.11:60630/api/users?email=</string>
+
     <!-- Strings related to chat -->
     <string name="chat_history_received_time">%1$d-%2$02d-%3$02d %4$02d:%5$02d</string>
     <string name="chat_message_hint">Message</string>
