Change contact list to show online/offline status. Fix so status is sent to back end correctly.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,9 @@
 
     <!-- Strings related to settings -->
     <string name="settings_copyright">© 2016 Peonsson and roppe546</string>
+
+    <!-- String related to user status -->
+    <string name="STATUS_ONLINE">Online</string>
+    <string name="STATUS_OFFLINE">Offline</string>
+    <string name="STATUS_BUSY">BUSY</string>
 </resources>
