--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,16 +23,19 @@
     <string name="chat_choose_image_text">Choose an image</string>
     <string name="chat_error_no_gallery_app_found">No image viewer app found</string>
     <string name="chat_error_could_not_read_image">File couldn\'t be read</string>
+    <string name="chat_error_cant_take_picture">Cant take a picture</string>
+    <string name="chat_error_message_too_long">Message can't be longer than 256 characters</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in with Googel</string>
+    <string name="action_sign_in">Sign in with Google</string>
     <string name="action_sign_in_short">Sign in with Google</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
+    <string name="error_sign_in_failed">Could not sign in</string>
 
     <!-- Strings related to settings -->
     <string name="settings_copyright">© 2016 Peonsson and roppe546</string>
